--- a/salty-news/package.json
+++ b/salty-news/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "hn",
+  "name": "salty-news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "gsap": "^2.1.3",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-d3-cloud": "^0.7.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "recharts": "^1.7.1",
-    "sass": "^1.22.10",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.0",
-    "styled-components": "^4.3.2"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "semantic-ui-react": "^0.88.2",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
