--- a/salty-news/package.json
+++ b/salty-news/package.json
@@ -2,6 +2,7 @@
   "name": "salty-news",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://salty-hacker-news.netlify.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
